--- a/linuxdoom-1.10/Makefile
+++ b/linuxdoom-1.10/Makefile
@@ -6,9 +6,9 @@
 #
 CC=  gcc  # gcc or g++
 
-CFLAGS=-g -Wall -DNORMALUNIX -DLINUX # -DUSEASM 
-LDFLAGS=-L/usr/X11R6/lib
-LIBS=-lXext -lX11 -lnsl -lm
+CFLAGS=-g -O0 -Wall -std=gnu89 -DNORMALUNIX -DLINUX # -DUSEASM
+LDFLAGS=
+LIBS=-lXext -lX11 -lm
 
 # subdirectory for objects
 O=linux
